# librawtest

./: .gitignore  CMakeLists.txt  main.cpp  simpletiff.h
LibRaw-0.18.7/lib/: libraw.exp  libraw.lib  libraw_static.lib
